--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "^1.1.1",
+    "@iconify/react": "^6.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.9",
     "@types/react": "^19.2.9",
